// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText default 1`] = `
.c1 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  max-width: 100%;
  min-width: 2rem;
  padding: 0 0.5rem;
}

.c1::-webkit-search-decoration,
.c1::-webkit-search-cancel-button,
.c1::-webkit-search-results-button,
.c1::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #939BA5;
}

.c1::-moz-placeholder {
  color: #939BA5;
}

.c1:-ms-input-placeholder {
  color: #939BA5;
}

.c1::placeholder {
  color: #939BA5;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  padding: 0.125rem 0.25rem;
  width: 100%;
  height: 36px;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
}

.c0 input {
  font-family: inherit;
}

.c0 .sc-jrsJCI {
  height: 100%;
  max-width: 100%;
  width: 100%;
}

.c0 .sc-jrsJCI input,
.c0 .sc-jrsJCI span {
  padding: 0 0.5rem;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
  onMouseDown={[Function]}
>
  <input
    className="c1"
    type="text"
  />
</div>
`;

exports[`InputText should accept disabled 1`] = `
.c1 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  max-width: 100%;
  min-width: 2rem;
  padding: 0 0.5rem;
}

.c1::-webkit-search-decoration,
.c1::-webkit-search-cancel-button,
.c1::-webkit-search-results-button,
.c1::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #939BA5;
}

.c1::-moz-placeholder {
  color: #939BA5;
}

.c1:-ms-input-placeholder {
  color: #939BA5;
}

.c1::placeholder {
  color: #939BA5;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  padding: 0.125rem 0.25rem;
  width: 100%;
  height: 36px;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
  background: #F5F6F7;
  color: #939BA5;
  cursor: default;
}

.c0 input {
  font-family: inherit;
}

.c0 .sc-jrsJCI {
  height: 100%;
  max-width: 100%;
  width: 100%;
}

.c0 .sc-jrsJCI input,
.c0 .sc-jrsJCI span {
  padding: 0 0.5rem;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c0:hover {
  border-color: #DEE1E5;
}

<div
  className="c0"
  onMouseDown={[Function]}
>
  <input
    className="c1"
    disabled={true}
    type="text"
  />
</div>
`;

exports[`InputText should accept readOnly 1`] = `
.c1 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  max-width: 100%;
  min-width: 2rem;
  padding: 0 0.5rem;
}

.c1::-webkit-search-decoration,
.c1::-webkit-search-cancel-button,
.c1::-webkit-search-results-button,
.c1::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #939BA5;
}

.c1::-moz-placeholder {
  color: #939BA5;
}

.c1:-ms-input-placeholder {
  color: #939BA5;
}

.c1::placeholder {
  color: #939BA5;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  padding: 0.125rem 0.25rem;
  width: 100%;
  height: 36px;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
}

.c0 input {
  font-family: inherit;
}

.c0 .sc-jrsJCI {
  height: 100%;
  max-width: 100%;
  width: 100%;
}

.c0 .sc-jrsJCI input,
.c0 .sc-jrsJCI span {
  padding: 0 0.5rem;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
  onMouseDown={[Function]}
>
  <input
    className="c1"
    readOnly={true}
    type="text"
  />
</div>
`;

exports[`InputText should accept required 1`] = `
.c1 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  max-width: 100%;
  min-width: 2rem;
  padding: 0 0.5rem;
}

.c1::-webkit-search-decoration,
.c1::-webkit-search-cancel-button,
.c1::-webkit-search-results-button,
.c1::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #939BA5;
}

.c1::-moz-placeholder {
  color: #939BA5;
}

.c1:-ms-input-placeholder {
  color: #939BA5;
}

.c1::placeholder {
  color: #939BA5;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  padding: 0.125rem 0.25rem;
  width: 100%;
  height: 36px;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
}

.c0 input {
  font-family: inherit;
}

.c0 .sc-jrsJCI {
  height: 100%;
  max-width: 100%;
  width: 100%;
}

.c0 .sc-jrsJCI input,
.c0 .sc-jrsJCI span {
  padding: 0 0.5rem;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
  onMouseDown={[Function]}
>
  <input
    className="c1"
    required={true}
    type="text"
  />
</div>
`;

exports[`InputText with a placeholder 1`] = `
.c1 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  max-width: 100%;
  min-width: 2rem;
  padding: 0 0.5rem;
}

.c1::-webkit-search-decoration,
.c1::-webkit-search-cancel-button,
.c1::-webkit-search-results-button,
.c1::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #939BA5;
}

.c1::-moz-placeholder {
  color: #939BA5;
}

.c1:-ms-input-placeholder {
  color: #939BA5;
}

.c1::placeholder {
  color: #939BA5;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  padding: 0.125rem 0.25rem;
  width: 100%;
  height: 36px;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
}

.c0 input {
  font-family: inherit;
}

.c0 .sc-jrsJCI {
  height: 100%;
  max-width: 100%;
  width: 100%;
}

.c0 .sc-jrsJCI input,
.c0 .sc-jrsJCI span {
  padding: 0 0.5rem;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
  onMouseDown={[Function]}
>
  <input
    className="c1"
    placeholder="I am a placeholder"
    type="text"
  />
</div>
`;

exports[`InputText with a value 1`] = `
.c1 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  max-width: 100%;
  min-width: 2rem;
  padding: 0 0.5rem;
}

.c1::-webkit-search-decoration,
.c1::-webkit-search-cancel-button,
.c1::-webkit-search-results-button,
.c1::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #939BA5;
}

.c1::-moz-placeholder {
  color: #939BA5;
}

.c1:-ms-input-placeholder {
  color: #939BA5;
}

.c1::placeholder {
  color: #939BA5;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  padding: 0.125rem 0.25rem;
  width: 100%;
  height: 36px;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
}

.c0 input {
  font-family: inherit;
}

.c0 .sc-jrsJCI {
  height: 100%;
  max-width: 100%;
  width: 100%;
}

.c0 .sc-jrsJCI input,
.c0 .sc-jrsJCI span {
  padding: 0 0.5rem;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
  onMouseDown={[Function]}
>
  <input
    className="c1"
    type="text"
    value="Some value"
  />
</div>
`;

exports[`InputText with aria-describedby 1`] = `
.c1 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  max-width: 100%;
  min-width: 2rem;
  padding: 0 0.5rem;
}

.c1::-webkit-search-decoration,
.c1::-webkit-search-cancel-button,
.c1::-webkit-search-results-button,
.c1::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #939BA5;
}

.c1::-moz-placeholder {
  color: #939BA5;
}

.c1:-ms-input-placeholder {
  color: #939BA5;
}

.c1::placeholder {
  color: #939BA5;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  padding: 0.125rem 0.25rem;
  width: 100%;
  height: 36px;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
}

.c0 input {
  font-family: inherit;
}

.c0 .sc-jrsJCI {
  height: 100%;
  max-width: 100%;
  width: 100%;
}

.c0 .sc-jrsJCI input,
.c0 .sc-jrsJCI span {
  padding: 0 0.5rem;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
  onMouseDown={[Function]}
>
  <input
    aria-describedby="some-id"
    className="c1"
    type="text"
  />
</div>
`;

exports[`InputText with name and id 1`] = `
.c1 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  max-width: 100%;
  min-width: 2rem;
  padding: 0 0.5rem;
}

.c1::-webkit-search-decoration,
.c1::-webkit-search-cancel-button,
.c1::-webkit-search-results-button,
.c1::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #939BA5;
}

.c1::-moz-placeholder {
  color: #939BA5;
}

.c1:-ms-input-placeholder {
  color: #939BA5;
}

.c1::placeholder {
  color: #939BA5;
}

.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  padding: 0.125rem 0.25rem;
  width: 100%;
  height: 36px;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
}

.c0 input {
  font-family: inherit;
}

.c0 .sc-jrsJCI {
  height: 100%;
  max-width: 100%;
  width: 100%;
}

.c0 .sc-jrsJCI input,
.c0 .sc-jrsJCI span {
  padding: 0 0.5rem;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
  onMouseDown={[Function]}
>
  <input
    className="c1"
    id="Bobby"
    name="Bob"
    type="text"
  />
</div>
`;
